Create basic html layout
added divs with class identifiers for main layout

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <title>Calculator</title>
 </head>
 <body>
+    <div class="header">Calculator</div>
+    <div class="container">Calc Content</div>
+    <footer>
+        <p>Nathan Chow</p>
+    </footer>
 </body>
 </html>
