Connect css and js to html
added link and script tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">Calculator</div>
@@ -11,5 +12,6 @@
     <footer>
         <p>Nathan Chow</p>
     </footer>
+    <script src="script.js" defer></script>
 </body>
 </html>
