--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="header">Calculator</div>
-    <div class="container">Calc Content</div>
+    <div class="container">
+        <div class="display">display</div>
+        <div class="keypad">keypad</div>
+    </div>
     <footer>
         <p>Nathan Chow</p>
     </footer>
