Add keypad layout elements
Created button elements that resemble a keypad for users to interact with

--- a/index.html
+++ b/index.html
@@ -10,7 +10,37 @@
     <div class="header">Calculator</div>
     <div class="container">
         <div class="display">display</div>
-        <div class="keypad">keypad</div>
+        <div class="keypad">
+            <div class="keypad-row">
+                <button value="AC">AC</button>
+                <button value="+/-">+/-</button>
+                <button value="%">%</button>
+                <button value="/">/</button>
+            </div>
+            <div class="keypad-row">
+                <button value="7">7</button>
+                <button value="8">8</button>
+                <button value="9">9</button>
+                <button value="*">*</button>
+            </div>
+            <div class="keypad-row">
+                <button value="4">4</button>
+                <button value="5">5</button>
+                <button value="6">6</button>
+                <button value="-">-</button>
+            </div>
+            <div class="keypad-row">
+                <button value="1">1</button>
+                <button value="2">2</button>
+                <button value="3">3</button>
+                <button value="+">+</button>
+            </div>
+            <div class="keypad-row">
+                <button value="0">0</button>
+                <button value=".">.</button>
+                <button value="=">=</button>
+            </div>
+        </div>
     </div>
     <footer>
         <p>Nathan Chow</p>
