Add additional class identifiers
Allows for easier access of button elements, grouping them with similiar functions.

--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
         <div class="display">display</div>
         <div class="keypad">
             <div class="keypad-row">
-                <button value="AC">AC</button>
-                <button value="+/-">+/-</button>
-                <button value="%">%</button>
-                <button value="/">/</button>
+                <button class="status" value="AC">AC</button>
+                <button class="sign" value="+/-">+/-</button>
+                <button class="operand" value="%">%</button>
+                <button class="operand" value="/">/</button>
             </div>
             <div class="keypad-row">
-                <button value="7">7</button>
-                <button value="8">8</button>
-                <button value="9">9</button>
-                <button value="*">*</button>
+                <button class="numeric" value="7">7</button>
+                <button class="numeric" value="8">8</button>
+                <button class="numeric" value="9">9</button>
+                <button class="operand" value="*">*</button>
             </div>
             <div class="keypad-row">
-                <button value="4">4</button>
-                <button value="5">5</button>
-                <button value="6">6</button>
-                <button value="-">-</button>
+                <button class="numeric" value="4">4</button>
+                <button class="numeric" value="5">5</button>
+                <button class="numeric" value="6">6</button>
+                <button class="operand" value="-">-</button>
             </div>
             <div class="keypad-row">
-                <button value="1">1</button>
-                <button value="2">2</button>
-                <button value="3">3</button>
-                <button value="+">+</button>
+                <button class="numeric" value="1">1</button>
+                <button class="numeric" value="2">2</button>
+                <button class="numeric" value="3">3</button>
+                <button class="operand" value="+">+</button>
             </div>
             <div class="keypad-row">
-                <button value="0">0</button>
-                <button value=".">.</button>
-                <button value="=">=</button>
+                <button class="numeric" value="0">0</button>
+                <button class="rounding" value=".">.</button>
+                <button class="operand" value="=">=</button>
             </div>
         </div>
     </div>
