Adjust class name for percentage button
Allow easier access in JS calls to percentage button element.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="keypad">
             <div class="keypad-row">
                 <button class="status" value="AC">AC</button>
-                <button class="sign" value="+/-">+/-</button>
-                <button class="operand" value="%">%</button>
+                <button class="sign" value="-">+/-</button>
+                <button class="percent" value="0.01">%</button>
                 <button class="operand" value="/">/</button>
             </div>
             <div class="keypad-row">
