--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
                 <button class="status" value="AC">AC</button>
                 <button class="sign" value="-">+/-</button>
                 <button class="percent" value="0.01">%</button>
-                <button class="operand" value="/">/</button>
+                <button class="operator" value="/">/</button>
             </div>
             <div class="keypad-row">
                 <button class="numeric" value="7">7</button>
                 <button class="numeric" value="8">8</button>
                 <button class="numeric" value="9">9</button>
-                <button class="operand" value="*">*</button>
+                <button class="operator" value="*">*</button>
             </div>
             <div class="keypad-row">
                 <button class="numeric" value="4">4</button>
                 <button class="numeric" value="5">5</button>
                 <button class="numeric" value="6">6</button>
-                <button class="operand" value="-">-</button>
+                <button class="operator" value="-">-</button>
             </div>
             <div class="keypad-row">
                 <button class="numeric" value="1">1</button>
                 <button class="numeric" value="2">2</button>
                 <button class="numeric" value="3">3</button>
-                <button class="operand" value="+">+</button>
+                <button class="operator" value="+">+</button>
             </div>
             <div class="keypad-row">
                 <button class="numeric" value="0">0</button>
                 <button class="rounding" value=".">.</button>
-                <button class="operand" value="=">=</button>
+                <button class="operator" value="=">=</button>
             </div>
         </div>
     </div>
