--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">Calculator</div>
     <div class="container">
         <div class="display">display</div>
         <div class="keypad">
@@ -42,9 +41,7 @@
             </div>
         </div>
     </div>
-    <footer>
-        <p>Nathan Chow</p>
-    </footer>
+    <footer>Nathan Chow 2024 ©</footer>
     <script src="script.js" defer></script>
 </body>
 </html>
