Add keyboard mapping functions.

--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
         <div class="display">display</div>
         <div class="keypad">
             <div class="keypad-row">
-                <button class="status" value="AC">AC</button>
-                <button class="sign" value="-">+/-</button>
-                <button class="percent" value="0.01">%</button>
-                <button class="operator" value="/">/</button>
+                <button class="status" value="AC" keyboard="c">AC</button>
+                <button class="sign" value="-" keyboard="!">+/-</button>
+                <button class="percent" value="0.01" keyboard="%">%</button>
+                <button class="operator" value="/" keyboard="/">/</button>
             </div>
             <div class="keypad-row">
-                <button class="numeric" value="7">7</button>
-                <button class="numeric" value="8">8</button>
-                <button class="numeric" value="9">9</button>
-                <button class="operator" value="*">*</button>
+                <button class="numeric" value="7" keyboard="7">7</button>
+                <button class="numeric" value="8" keyboard="8">8</button>
+                <button class="numeric" value="9" keyboard="9">9</button>
+                <button class="operator" value="*" keyboard="*">*</button>
             </div>
             <div class="keypad-row">
-                <button class="numeric" value="4">4</button>
-                <button class="numeric" value="5">5</button>
-                <button class="numeric" value="6">6</button>
-                <button class="operator" value="-">-</button>
+                <button class="numeric" value="4" keyboard="4">4</button>
+                <button class="numeric" value="5" keyboard="5">5</button>
+                <button class="numeric" value="6" keyboard="6">6</button>
+                <button class="operator" value="-" keyboard="-">-</button>
             </div>
             <div class="keypad-row">
-                <button class="numeric" value="1">1</button>
-                <button class="numeric" value="2">2</button>
-                <button class="numeric" value="3">3</button>
-                <button class="operator" value="+">+</button>
+                <button class="numeric" value="1" keyboard="1">1</button>
+                <button class="numeric" value="2" keyboard="2">2</button>
+                <button class="numeric" value="3" keyboard="3">3</button>
+                <button class="operator" value="+" keyboard="+">+</button>
             </div>
             <div class="keypad-row">
-                <button class="numeric" value="0">0</button>
-                <button class="rounding" value=".">.</button>
-                <button class="operator" value="=">=</button>
+                <button class="numeric" value="0" keyboard="0">0</button>
+                <button class="rounding" value="." keyboard=".">.</button>
+                <button class="operator" value="=" keyboard="Enter">=</button>
             </div>
         </div>
     </div>
